2009-03-24  Ralf Corsépius <ralf.corsepius@rtems.org>

	* config/m68k/t-rtems: Add m5329 multilib.

2009-03-23  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-03-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/39482
	* config/i386/i386.md (*truncdfsf_mixed): Avoid combining registers
	from different units in a single alternative.
	(*truncdfsf_i387): Ditto.
	(*truncxfsf2_mixed): Ditto.
	(*truncxfdf2_mixed): Ditto.

2009-03-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39477
	* doc/extend.texi: Correct register behavior for regparm on Intel 386.

2009-03-12  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39327
	* config/i386/sse.md (sse3_addsubv4sf3): Correct item bits.
	(sse3_addsubv2df3): Likewise.

2009-03-09  Denis Chertykov  <denisc@overta.ru>

	* config/avr/avr.md ("andsi3"): Fix wrong cc attribute.

2009-03-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_mdebug_abi_name): Fix the handling
	of ABI_64.

2009-03-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (TARGET_SECTION_TYPE_FLAGS): Define.
	(spu_section_type_flags): New function.

2009-02-28  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline:
	2008-12-02  Martin Jambor  <mjambor@suse.cz>
	
	PR middle-end/37861
	* tree-ssa-forwprop.c 
	(forward_propagate_addr_into_variable_array_index): Check that the
	offset is not computed from a MULT_EXPR if element size is one.

2009-02-28  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-02-26  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.h (alpha_expand_mov): Return false if
	force_const_mem returns NULL_RTX.

2009-02-26  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-02-02  Jakub Jelinek  <jakub@redhat.com>

	PR inline-asm/39058
	* recog.h (asm_operand_ok): Add constraints argument.